# dsl_data_processing

./: Cargo.toml  README.md  output.csv  users.csv
src/: lib.rs  main.rs
src/ast/: expressions.rs  mod.rs  operations.rs
src/data_sources/: columnar.rs  csv_source.rs  mod.rs
src/interpreter/: environment.rs  evaluator.rs  lazy_evaluator.rs  mod.rs  runtime_error.rs
src/optimizer/: mod.rs  query_optimizer.rs
src/parser/: lexer.rs  parser.rs
src/type_system/: inference.rs  mod.rs  types.rs
