[package]
name = "dsl-data-processing"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "7.1"   # For parsing expressions
serde = { version = "1", features = ["derive"] }  # For AST serialization
serde_json = "1.0"
csv = "1.3"
rayon = "1.10.0"

# Performance optimizations
polars = { version = "0.35", features = ["lazy", "csv", "json", "parquet"] }
arrow = "50.0"
dashmap = "5.5"  # Concurrent HashMap for thread-safe operations
smallvec = "1.11"  # Stack-allocated vectors for small collections
once_cell = "1.19"  # For lazy static initialization

# Streaming and async support
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# Memory optimization
bumpalo = "3.14"  # Arena allocator for temporary objects
typed-arena = "2.0"
